@@ -4,7 +4,6 @@ sub ask_sendsep {
 
   #---- Ask for the "mailbox separator"
   $msg = <<EOM;
-
 What does your MTA use as the mailbox separator?
  Majordomo needs to know how it can add additional uninterpreted data to
   the local part of an address.  This is generally a configuration option
